--- a/PT_NIF/debug_nif.ipynb
+++ b/PT_NIF/debug_nif.ipynb
@@ -73,7 +73,7 @@
     }
    ],
    "source": [
-    "data = DataManager(data_file,batch_size=2)\n",
+    "data = DataManager(data_file,batch_size=32)\n",
     "model = ParamNet()\n",
     "model.apply(init_weights)"
    ]
@@ -124,13 +124,103 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([2, 19])\n",
-      "tensor([[0.0092, 0.0102, 0.0098, 0.0115, 0.0100, 0.0094, 0.0090, 0.0099, 0.0096,\n",
-      "         0.0098, 0.0107, 0.0100, 0.0100, 0.0105, 0.0106, 0.0096, 0.0095, 0.0101,\n",
-      "         0.0096],\n",
-      "        [0.0092, 0.0102, 0.0098, 0.0115, 0.0100, 0.0094, 0.0090, 0.0099, 0.0095,\n",
-      "         0.0098, 0.0107, 0.0100, 0.0100, 0.0106, 0.0106, 0.0096, 0.0095, 0.0101,\n",
-      "         0.0096]], grad_fn=<AddmmBackward0>)\n"
+      "torch.Size([32, 19])\n",
+      "tensor([[0.0102, 0.0101, 0.0096, 0.0095, 0.0102, 0.0097, 0.0102, 0.0106, 0.0100,\n",
+      "         0.0092, 0.0096, 0.0090, 0.0107, 0.0097, 0.0104, 0.0088, 0.0101, 0.0103,\n",
+      "         0.0109],\n",
+      "        [0.0102, 0.0101, 0.0096, 0.0095, 0.0102, 0.0096, 0.0103, 0.0106, 0.0100,\n",
+      "         0.0091, 0.0096, 0.0090, 0.0107, 0.0097, 0.0104, 0.0087, 0.0101, 0.0103,\n",
+      "         0.0109],\n",
+      "        [0.0102, 0.0101, 0.0096, 0.0095, 0.0102, 0.0096, 0.0103, 0.0106, 0.0100,\n",
+      "         0.0091, 0.0096, 0.0090, 0.0107, 0.0097, 0.0104, 0.0087, 0.0101, 0.0103,\n",
+      "         0.0109],\n",
+      "        [0.0102, 0.0101, 0.0096, 0.0095, 0.0102, 0.0097, 0.0102, 0.0106, 0.0100,\n",
+      "         0.0091, 0.0096, 0.0090, 0.0107, 0.0097, 0.0104, 0.0088, 0.0101, 0.0103,\n",
+      "         0.0109],\n",
+      "        [0.0102, 0.0101, 0.0096, 0.0095, 0.0102, 0.0097, 0.0102, 0.0106, 0.0100,\n",
+      "         0.0092, 0.0096, 0.0090, 0.0107, 0.0097, 0.0104, 0.0088, 0.0101, 0.0103,\n",
+      "         0.0109],\n",
+      "        [0.0102, 0.0101, 0.0096, 0.0095, 0.0102, 0.0097, 0.0102, 0.0106, 0.0100,\n",
+      "         0.0092, 0.0096, 0.0090, 0.0107, 0.0097, 0.0104, 0.0088, 0.0101, 0.0103,\n",
+      "         0.0109],\n",
+      "        [0.0102, 0.0101, 0.0096, 0.0095, 0.0102, 0.0097, 0.0102, 0.0106, 0.0100,\n",
+      "         0.0091, 0.0096, 0.0090, 0.0107, 0.0097, 0.0104, 0.0088, 0.0101, 0.0103,\n",
+      "         0.0109],\n",
+      "        [0.0102, 0.0101, 0.0096, 0.0095, 0.0102, 0.0097, 0.0102, 0.0106, 0.0100,\n",
+      "         0.0092, 0.0096, 0.0090, 0.0107, 0.0097, 0.0104, 0.0088, 0.0101, 0.0103,\n",
+      "         0.0109],\n",
+      "        [0.0102, 0.0101, 0.0096, 0.0095, 0.0102, 0.0096, 0.0103, 0.0106, 0.0100,\n",
+      "         0.0091, 0.0096, 0.0090, 0.0107, 0.0097, 0.0104, 0.0087, 0.0101, 0.0103,\n",
+      "         0.0109],\n",
+      "        [0.0102, 0.0101, 0.0096, 0.0095, 0.0102, 0.0096, 0.0103, 0.0106, 0.0100,\n",
+      "         0.0091, 0.0096, 0.0089, 0.0107, 0.0096, 0.0105, 0.0087, 0.0101, 0.0103,\n",
+      "         0.0109],\n",
+      "        [0.0102, 0.0101, 0.0096, 0.0095, 0.0102, 0.0096, 0.0103, 0.0106, 0.0100,\n",
+      "         0.0091, 0.0096, 0.0090, 0.0107, 0.0097, 0.0104, 0.0087, 0.0101, 0.0103,\n",
+      "         0.0109],\n",
+      "        [0.0102, 0.0101, 0.0096, 0.0095, 0.0102, 0.0097, 0.0102, 0.0106, 0.0100,\n",
+      "         0.0092, 0.0096, 0.0090, 0.0107, 0.0097, 0.0104, 0.0088, 0.0101, 0.0103,\n",
+      "         0.0109],\n",
+      "        [0.0102, 0.0101, 0.0096, 0.0095, 0.0102, 0.0097, 0.0102, 0.0106, 0.0100,\n",
+      "         0.0092, 0.0096, 0.0090, 0.0107, 0.0097, 0.0104, 0.0088, 0.0101, 0.0103,\n",
+      "         0.0109],\n",
+      "        [0.0102, 0.0101, 0.0096, 0.0095, 0.0102, 0.0096, 0.0103, 0.0106, 0.0100,\n",
+      "         0.0091, 0.0096, 0.0089, 0.0107, 0.0096, 0.0105, 0.0087, 0.0101, 0.0103,\n",
+      "         0.0109],\n",
+      "        [0.0102, 0.0101, 0.0096, 0.0095, 0.0102, 0.0097, 0.0102, 0.0106, 0.0100,\n",
+      "         0.0092, 0.0096, 0.0090, 0.0107, 0.0097, 0.0104, 0.0088, 0.0101, 0.0103,\n",
+      "         0.0109],\n",
+      "        [0.0102, 0.0101, 0.0096, 0.0095, 0.0102, 0.0096, 0.0103, 0.0106, 0.0100,\n",
+      "         0.0091, 0.0096, 0.0090, 0.0107, 0.0097, 0.0104, 0.0087, 0.0101, 0.0103,\n",
+      "         0.0109],\n",
+      "        [0.0102, 0.0101, 0.0096, 0.0095, 0.0102, 0.0097, 0.0102, 0.0106, 0.0100,\n",
+      "         0.0091, 0.0096, 0.0090, 0.0107, 0.0097, 0.0104, 0.0088, 0.0101, 0.0103,\n",
+      "         0.0109],\n",
+      "        [0.0102, 0.0101, 0.0096, 0.0095, 0.0102, 0.0096, 0.0103, 0.0106, 0.0100,\n",
+      "         0.0091, 0.0096, 0.0090, 0.0107, 0.0097, 0.0104, 0.0087, 0.0101, 0.0103,\n",
+      "         0.0109],\n",
+      "        [0.0102, 0.0101, 0.0096, 0.0095, 0.0102, 0.0097, 0.0102, 0.0106, 0.0100,\n",
+      "         0.0092, 0.0096, 0.0090, 0.0107, 0.0097, 0.0104, 0.0088, 0.0101, 0.0103,\n",
+      "         0.0109],\n",
+      "        [0.0102, 0.0101, 0.0096, 0.0095, 0.0102, 0.0097, 0.0102, 0.0106, 0.0100,\n",
+      "         0.0092, 0.0096, 0.0090, 0.0107, 0.0097, 0.0104, 0.0088, 0.0101, 0.0103,\n",
+      "         0.0109],\n",
+      "        [0.0102, 0.0101, 0.0096, 0.0095, 0.0102, 0.0097, 0.0102, 0.0106, 0.0100,\n",
+      "         0.0092, 0.0096, 0.0090, 0.0107, 0.0097, 0.0104, 0.0088, 0.0101, 0.0103,\n",
+      "         0.0109],\n",
+      "        [0.0102, 0.0101, 0.0096, 0.0095, 0.0102, 0.0096, 0.0103, 0.0106, 0.0100,\n",
+      "         0.0091, 0.0096, 0.0089, 0.0107, 0.0097, 0.0104, 0.0087, 0.0101, 0.0103,\n",
+      "         0.0109],\n",
+      "        [0.0102, 0.0101, 0.0096, 0.0095, 0.0102, 0.0096, 0.0103, 0.0106, 0.0100,\n",
+      "         0.0091, 0.0096, 0.0090, 0.0107, 0.0097, 0.0104, 0.0087, 0.0101, 0.0103,\n",
+      "         0.0109],\n",
+      "        [0.0102, 0.0101, 0.0096, 0.0095, 0.0102, 0.0096, 0.0103, 0.0106, 0.0100,\n",
+      "         0.0091, 0.0096, 0.0090, 0.0107, 0.0097, 0.0104, 0.0087, 0.0101, 0.0103,\n",
+      "         0.0109],\n",
+      "        [0.0102, 0.0101, 0.0096, 0.0095, 0.0102, 0.0096, 0.0103, 0.0106, 0.0100,\n",
+      "         0.0091, 0.0096, 0.0089, 0.0107, 0.0097, 0.0104, 0.0087, 0.0101, 0.0103,\n",
+      "         0.0109],\n",
+      "        [0.0102, 0.0101, 0.0096, 0.0095, 0.0102, 0.0097, 0.0102, 0.0106, 0.0100,\n",
+      "         0.0092, 0.0096, 0.0090, 0.0107, 0.0097, 0.0104, 0.0088, 0.0101, 0.0103,\n",
+      "         0.0109],\n",
+      "        [0.0102, 0.0101, 0.0096, 0.0095, 0.0102, 0.0096, 0.0103, 0.0106, 0.0100,\n",
+      "         0.0091, 0.0096, 0.0089, 0.0107, 0.0097, 0.0104, 0.0087, 0.0101, 0.0103,\n",
+      "         0.0109],\n",
+      "        [0.0102, 0.0101, 0.0096, 0.0095, 0.0102, 0.0096, 0.0103, 0.0106, 0.0100,\n",
+      "         0.0091, 0.0096, 0.0089, 0.0107, 0.0096, 0.0105, 0.0087, 0.0101, 0.0103,\n",
+      "         0.0109],\n",
+      "        [0.0102, 0.0101, 0.0096, 0.0095, 0.0102, 0.0096, 0.0103, 0.0106, 0.0100,\n",
+      "         0.0091, 0.0096, 0.0090, 0.0107, 0.0097, 0.0104, 0.0087, 0.0101, 0.0103,\n",
+      "         0.0109],\n",
+      "        [0.0102, 0.0101, 0.0096, 0.0095, 0.0102, 0.0097, 0.0102, 0.0106, 0.0100,\n",
+      "         0.0092, 0.0096, 0.0090, 0.0107, 0.0097, 0.0104, 0.0088, 0.0101, 0.0103,\n",
+      "         0.0109],\n",
+      "        [0.0102, 0.0101, 0.0096, 0.0095, 0.0102, 0.0096, 0.0103, 0.0106, 0.0100,\n",
+      "         0.0091, 0.0096, 0.0089, 0.0107, 0.0097, 0.0104, 0.0087, 0.0101, 0.0103,\n",
+      "         0.0109],\n",
+      "        [0.0102, 0.0101, 0.0096, 0.0095, 0.0102, 0.0097, 0.0102, 0.0106, 0.0100,\n",
+      "         0.0092, 0.0096, 0.0090, 0.0107, 0.0097, 0.0104, 0.0088, 0.0101, 0.0103,\n",
+      "         0.0109]], grad_fn=<AddmmBackward0>)\n"
      ]
     }
    ],
@@ -148,7 +238,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([2, 1])\n"
+      "torch.Size([32, 1])\n"
      ]
     }
    ],
@@ -174,9 +264,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([2, 1])\n",
-      "tensor([[-1.2413],\n",
-      "        [ 0.0058]])\n"
+      "torch.Size([32, 1])\n",
+      "tensor([[0.0110],\n",
+      "        [0.0112],\n",
+      "        [0.0113],\n",
+      "        [0.0111],\n",
+      "        [0.0112],\n",
+      "        [0.0113],\n",
+      "        [0.0110],\n",
+      "        [0.0111],\n",
+      "        [0.0110],\n",
+      "        [0.0113],\n",
+      "        [0.0113],\n",
+      "        [0.0112],\n",
+      "        [0.0113],\n",
+      "        [0.0112],\n",
+      "        [0.0111],\n",
+      "        [0.0111],\n",
+      "        [0.0111],\n",
+      "        [0.0112],\n",
+      "        [0.0113],\n",
+      "        [0.0112],\n",
+      "        [0.0113],\n",
+      "        [0.0111],\n",
+      "        [0.0111],\n",
+      "        [0.0113],\n",
+      "        [0.0111],\n",
+      "        [0.0111],\n",
+      "        [0.0112],\n",
+      "        [0.0112],\n",
+      "        [0.0112],\n",
+      "        [0.0111],\n",
+      "        [0.0113],\n",
+      "        [0.0111]], grad_fn=<AddBackward0>)\n"
      ]
     }
    ],
