Added train_nif script

--- a/PT_NIF/train_nif.ipynb
+++ b/PT_NIF/train_nif.ipynb
@@ -37,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_file = 'tw_train.npz'\n",
+    "data_file = 'data/tw_train.npz'\n",
     "\n",
     "def init_weights(m):\n",
     "    if isinstance(m, nn.Linear):\n",
@@ -110,7 +110,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f1cb5454bf50452db67a9242e8b4dc56",
+       "model_id": "3a5e4b14d554473293e48f13f2884555",
        "version_major": 2,
        "version_minor": 0
       },
