--- a/PT_NIF/train_nif.ipynb
+++ b/PT_NIF/train_nif.ipynb
@@ -17,6 +17,26 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.cuda.is_available()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from model.nif import NIF_small\n",
@@ -33,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -68,32 +88,45 @@
        ")"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = DataManager(data_file)\n",
+    "data = DataManager(data_file,1024)\n",
+    "\n",
+    "\n",
     "model = NIF_small()\n",
     "model.apply(init_weights)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.set_float32_matmul_precision('high')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "GPU available: False, used: False\n",
+      "GPU available: True (cuda), used: True\n",
       "TPU available: False, using: 0 TPU cores\n",
       "IPU available: False, using: 0 IPUs\n",
       "HPU available: False, using: 0 HPUs\n",
-      "c:\\Users\\juane\\anaconda3\\lib\\site-packages\\pytorch_lightning\\loops\\utilities.py:94: PossibleUserWarning: `max_epochs` was not set. Setting it to 1000 epochs. To train without an epoch limit, set `max_epochs=-1`.\n",
-      "  rank_zero_warn(\n",
+      "Restoring states from the checkpoint path at ./lightning_logs/version_3/checkpoints/epoch=4289-step=42900.ckpt\n",
+      "/home/juandiego/miniconda3/envs/ptml/lib/python3.8/site-packages/pytorch_lightning/callbacks/model_checkpoint.py:337: UserWarning: The dirpath has changed from '/home/juandiego/pytorch-sandbox/PT_NIF/lightning_logs/version_3/checkpoints' to '/home/juandiego/pytorch-sandbox/PT_NIF/lightning_logs/version_4/checkpoints', therefore `best_model_score`, `kth_best_model_path`, `kth_value`, `last_model_path` and `best_k_models` won't be reloaded. Only `best_model_path` will be reloaded.\n",
+      "  warnings.warn(\n",
+      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
       "\n",
       "  | Name      | Type     | Params\n",
       "---------------------------------------\n",
@@ -103,36 +136,33 @@
       "0         Non-trainable params\n",
       "51        Total params\n",
       "0.000     Total estimated model params size (MB)\n",
-      "c:\\Users\\juane\\anaconda3\\lib\\site-packages\\pytorch_lightning\\trainer\\connectors\\data_connector.py:224: PossibleUserWarning: The dataloader, train_dataloader, does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` (try 4 which is the number of cpus on this machine) in the `DataLoader` init to improve performance.\n",
+      "Restored all states from the checkpoint at ./lightning_logs/version_3/checkpoints/epoch=4289-step=42900.ckpt\n",
+      "/home/juandiego/miniconda3/envs/ptml/lib/python3.8/site-packages/pytorch_lightning/trainer/connectors/data_connector.py:430: PossibleUserWarning: The dataloader, train_dataloader, does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` (try 16 which is the number of cpus on this machine) in the `DataLoader` init to improve performance.\n",
+      "  rank_zero_warn(\n",
+      "/home/juandiego/miniconda3/envs/ptml/lib/python3.8/site-packages/pytorch_lightning/loops/fit_loop.py:280: PossibleUserWarning: The number of training batches (5) is smaller than the logging interval Trainer(log_every_n_steps=50). Set a lower value for log_every_n_steps if you want to see logs for the training epoch.\n",
       "  rank_zero_warn(\n"
      ]
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3a5e4b14d554473293e48f13f2884555",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Training: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 60724:  60%|██████    | 3/5 [00:00<00:00, 65.96it/s, v_num=4] "
+     ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\juane\\anaconda3\\lib\\site-packages\\pytorch_lightning\\trainer\\call.py:48: UserWarning: Detected KeyboardInterrupt, attempting graceful shutdown...\n",
+      "/home/juandiego/miniconda3/envs/ptml/lib/python3.8/site-packages/pytorch_lightning/trainer/call.py:54: UserWarning: Detected KeyboardInterrupt, attempting graceful shutdown...\n",
       "  rank_zero_warn(\"Detected KeyboardInterrupt, attempting graceful shutdown...\")\n"
      ]
     }
    ],
    "source": [
-    "trainer = pl.Trainer()\n",
-    "trainer.fit(model,data)"
+    "chkpnt = \"./lightning_logs/version_3/checkpoints/epoch=4289-step=42900.ckpt\"\n",
+    "trainer = pl.Trainer(accelerator=\"gpu\",max_epochs=80000)\n",
+    "trainer.fit(model,data,ckpt_path=chkpnt)"
    ]
   }
  ],
@@ -152,7 +182,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.16"
   },
   "orig_nbformat": 4,
   "vscode": {
